raft joint consensus

--- a/Sections/high/high.tex
+++ b/Sections/high/high.tex
@@ -227,7 +227,7 @@ Distributed systems cover a vast and diverse range of applications, including:
     \item \textbf{Load Balancing:} Say a system $A$ is overwhelmed with requests, it can distribute the load to system $B$, acting as 
     one system, from the requests point of view.
 \end{itemize}
-In todays market there are numerous applications of distributed systems, such as:
+In todays market, there are numerous applications of distributed systems, such as:
 Cloud Computing, Social Networks, E-commerce, Streaming Services, Search Engines, Renting Computation (AI training), etc.
 
 Let's begin to define the problem space. Say there are 
