--- a/main.tex
+++ b/main.tex
@@ -52,15 +52,15 @@
     \chapter*{Prerequisites}
     \input{Sections/pre}
     
-\chapter{Introduction}
-\input{Sections/high/high}
-\input{Sections/rpc/rpc}
-\input{Sections/rpc_2/rpc_2}
-\input{Sections/time/time}
-\input{Sections/imp_rpc/imp.tex}
-\chapter{Working with Distributed Systems}
-\input{Sections/snap/snap}
-\input{Sections/rep/rep}
+% \chapter{Introduction}
+% \input{Sections/high/high}
+% \input{Sections/rpc/rpc}
+% \input{Sections/rpc_2/rpc_2}
+% \input{Sections/time/time}
+% \input{Sections/imp_rpc/imp.tex}
+% \chapter{Working with Distributed Systems}
+% \input{Sections/snap/snap}
+% \input{Sections/rep/rep}
 
 \input{Sections/raft/raft}
 \input{Sections/crash/crash.tex}
