--- a/Sections/snap/snap.tex
+++ b/Sections/snap/snap.tex
@@ -4,7 +4,8 @@
 This section discusses saving state. This is useful for fault-tolerance and system migrations.
 
 \begin{Def}[Snapshot]
-
+    
+    \label{def:snapshot}
     A \textbf{snapshot} is a consistent global state of a distributed system at a specific point in time. 
 \end{Def}
 
